log
Thu 16 May 2024 02:25:05 AM UTC: 
 tests:  0|5
total_score: 0/70
48deaaf
Thu 16 May 2024 03:04:30 AM UTC: 
 sudoku.c | 47 +++++++++++++++++++++++++++++++++++------------
 1 file changed, 35 insertions(+), 12 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:7: error: unused variable ‘auxSudo’ [-Werror=unused-variable]
   57 |   int auxSudo = n->sudo[0][0];
      |       ^~~~~~~
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:80:15: error: unused variable ‘newN’ [-Werror=unused-variable]
   80 |         Node *newN = copy(n);
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
53fdc39
Thu 16 May 2024 03:04:50 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:57:7: error: unused variable ‘auxSudo’ [-Werror=unused-variable]
   57 |   int auxSudo = n->sudo[0][0];
      |       ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b45c0ee
Thu 16 May 2024 03:05:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bb5de95
Thu 16 May 2024 03:16:49 AM UTC: 
 sudoku.c | 28 ++++++++--------------------
 1 file changed, 8 insertions(+), 20 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:11: error: unused variable ‘numero’ [-Werror=unused-variable]
   53 |       int numero = n->sudo[i][k];
      |           ^~~~~~
sudoku.c:49:7: error: unused variable ‘submatriz’ [-Werror=unused-variable]
   49 |   int submatriz[9][9] = {};
      |       ^~~~~~~~~
sudoku.c:48:7: error: unused variable ‘columna’ [-Werror=unused-variable]
   48 |   int columna[9][9] = {};
      |       ^~~~~~~
sudoku.c:47:7: error: unused variable ‘fila’ [-Werror=unused-variable]
   47 |   int fila[9][9] = {};
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
52fabae
Thu 16 May 2024 03:17:43 AM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:11: error: unused variable ‘numero’ [-Werror=unused-variable]
   53 |       int numero = n->sudo[i][k];
      |           ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4c250dc
Thu 16 May 2024 03:17:54 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9d56bc2
Thu 16 May 2024 03:27:46 AM UTC: 
 sudoku.c | 30 ++++++++++++++++++++++++------
 1 file changed, 24 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:63:13: error: unused variable ‘subInd’ [-Werror=unused-variable]
   63 |         int subInd = col * 3 + fil;
      |             ^~~~~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6a0aa58
Thu 16 May 2024 03:28:49 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:262:1: error: expected declaration or statement at end of input
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0044798
Thu 16 May 2024 03:30:33 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
de8e57b
Thu 16 May 2024 03:31:35 AM UTC: 
 sudoku.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  0|5
total_score: 0/70
691aca2
Thu 16 May 2024 03:33:16 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
903a065
Thu 16 May 2024 03:33:36 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1489b13
Thu 16 May 2024 03:34:08 AM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  3|4
total_score: 20/70
08bb1cd
Thu 16 May 2024 03:43:52 AM UTC: 
 sudoku.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:74:7: error: variable ‘vacio’ set but not used [-Werror=unused-but-set-variable]
   74 |   int vacio = 0; // si encontramos, 0 vacia 1 que no
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e14f30b
Thu 16 May 2024 03:45:11 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
724bd5d
Thu 16 May 2024 03:46:53 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
125da6f
Thu 16 May 2024 03:49:25 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
69ab12c
Thu 16 May 2024 03:51:02 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|4
total_score: 20/70
b7b6239
Thu 16 May 2024 03:51:42 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
df7e447
Thu 16 May 2024 03:52:14 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
37e78b5
Sat 18 May 2024 05:15:22 PM UTC: 
 sudoku.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
af84ece
Sat 18 May 2024 05:42:43 PM UTC: 
 sudoku.c | 45 ++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 44 insertions(+), 1 deletion(-)
 tests:  0|0
9de5f89
Sat 18 May 2024 05:43:29 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
af7f12e
Sat 18 May 2024 05:48:17 PM UTC: 
 sudoku.c | 17 ++++-------------
 1 file changed, 4 insertions(+), 13 deletions(-)
 tests:  0|0
aad2a6b
Sat 18 May 2024 05:56:52 PM UTC: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  10|0
total_score: 70/70
7619bd6
